# warzone2100

./: Makefile.am  configure.ac  shell.nix
lib/qtplugins/: Makefile.am  qtplugins.cpp  qtplugins.h  qtpluginsinterface.h
po/: POTFILES.in
src/: Makefile.am  action.cpp  cheat.cpp  cluster.cpp  combat.cpp  design.cpp  display.cpp  droid.cpp  game.cpp  hci.cpp  init.cpp  keybind.cpp  levels.cpp  loop.cpp  main.cpp  mission.cpp  move.cpp  multijoin.cpp  multiplay.cpp  multistruct.cpp  objmem.cpp  order.cpp  qtplugins.cpp  qtplugins.h  qtpluginsinterface.h  research.cpp  scriptfuncs.cpp  scriptvals_parser.h  selection.cpp  structure.cpp  transporter.cpp
